- Updated builds.yml

--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -164,8 +164,11 @@ jobs:
           name: docs-${{ env.BUILD_VERSION }}.zip
           path: docs-${{ env.BUILD_VERSION }}.zip
 
-  windows-unit-testing-o0:
-    name: Windows - Unit Testing -o0
+  windows-unit-testing:
+    strategy:
+      matrix:
+        optimization: [0,1,2,3,4,5,6,7,8,9]
+    name: Windows - Unit Testing -${{ matrix.optimization }}
     runs-on: windows-latest
     needs: windows-build
     steps:
@@ -179,388 +182,13 @@ jobs:
           name: windows-build-artifact
           path: bin
       - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o0
+        run: bin\Mosa.Utility.UnitTests.exe -o{{ matrix.optimization }}
 
-  windows-unit-testing-o1:
-    name: Windows - Unit Testing -o1
-    runs-on: windows-latest
-    needs: windows-build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: windows-build-artifact
-          path: bin
-      - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o1
-
-  windows-unit-testing-o2:
-    name: Windows - Unit Testing -o2
-    runs-on: windows-latest
-    needs: windows-build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: windows-build-artifact
-          path: bin
-      - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o2
-
-  windows-unit-testing-o3:
-    name: Windows - Unit Testing -o3
-    runs-on: windows-latest
-    needs: windows-build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: windows-build-artifact
-          path: bin
-      - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o3
-
-  windows-unit-testing-o4:
-    name: Windows - Unit Testing -o4
-    runs-on: windows-latest
-    needs: windows-build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: windows-build-artifact
-          path: bin
-      - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o4
-
-  windows-unit-testing-o5:
-    name: Windows - Unit Testing -o5
-    runs-on: windows-latest
-    needs: windows-build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: windows-build-artifact
-          path: bin
-      - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o5
-
-  windows-unit-testing-o6:
-    name: Windows - Unit Testing -o6
-    runs-on: windows-latest
-    needs: windows-build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: windows-build-artifact
-          path: bin
-      - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o6
-
-  windows-unit-testing-o7:
-    name: Windows - Unit Testing -o7
-    runs-on: windows-latest
-    needs: windows-build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: windows-build-artifact
-          path: bin
-      - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o7
-
-  windows-unit-testing-o8:
-    name: Windows - Unit Testing -o8
-    runs-on: windows-latest
-    needs: windows-build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: windows-build-artifact
-          path: bin
-      - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o8
-        
-  windows-unit-testing-o9:
-    name: Windows - Unit Testing -o9
-    runs-on: windows-latest
-    needs: windows-build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: windows-build-artifact
-          path: bin
-      - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o9
-
-  linux-unit-testing-o0:
-    name: Linux - Unit Testing -o0
-    runs-on: ubuntu-latest
-    needs: linux-build
-    steps:
-      - name: Set net7.0
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '7.0.x'
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: linux-build-artifact
-          path: bin
-      - name: Update Package Respository
-        run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
-      - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
-      - name: Unit Testing
-        run: dotnet bin/Mosa.Utility.UnitTests.dll -o0
-        
-  linux-unit-testing-o1:
-    name: Linux - Unit Testing -o1
-    runs-on: ubuntu-latest
-    needs: linux-build
-    steps:
-      - name: Set net7.0
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '7.0.x'
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: linux-build-artifact
-          path: bin
-      - name: Update Package Respository
-        run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
-      - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
-      - name: Unit Testing
-        run: dotnet bin/Mosa.Utility.UnitTests.dll -o1
-
-  linux-unit-testing-o2:
-    name: Linux - Unit Testing -o2
-    runs-on: ubuntu-latest
-    needs: linux-build
-    steps:
-      - name: Set net7.0
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '7.0.x'
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: linux-build-artifact
-          path: bin
-      - name: Update Package Respository
-        run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
-      - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
-      - name: Unit Testing
-        run: dotnet bin/Mosa.Utility.UnitTests.dll -o2
-
-  linux-unit-testing-o3:
-    name: Linux - Unit Testing -o3
-    runs-on: ubuntu-latest
-    needs: linux-build
-    steps:
-      - name: Set net7.0
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '7.0.x'
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: linux-build-artifact
-          path: bin
-      - name: Update Package Respository
-        run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
-      - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
-      - name: Unit Testing
-        run: dotnet bin/Mosa.Utility.UnitTests.dll -o3
-
-  linux-unit-testing-o4:
-    name: Linux - Unit Testing -o4
-    runs-on: ubuntu-latest
-    needs: linux-build
-    steps:
-      - name: Set net7.0
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '7.0.x'
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: linux-build-artifact
-          path: bin
-      - name: Update Package Respository
-        run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
-      - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
-      - name: Unit Testing
-        run: dotnet bin/Mosa.Utility.UnitTests.dll -o4
-
-  linux-unit-testing-o5:
-    name: Linux - Unit Testing -o5
-    runs-on: ubuntu-latest
-    needs: linux-build
-    steps:
-      - name: Set net7.0
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '7.0.x'
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: linux-build-artifact
-          path: bin
-      - name: Update Package Respository
-        run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
-      - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
-      - name: Unit Testing
-        run: dotnet bin/Mosa.Utility.UnitTests.dll -o5
-
-  linux-unit-testing-o6:
-    name: Linux - Unit Testing -o6
-    runs-on: ubuntu-latest
-    needs: linux-build
-    steps:
-      - name: Set net7.0
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '7.0.x'
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: linux-build-artifact
-          path: bin
-      - name: Update Package Respository
-        run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
-      - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
-      - name: Unit Testing
-        run: dotnet bin/Mosa.Utility.UnitTests.dll -o6
-
-  linux-unit-testing-o7:
-    name: Linux - Unit Testing -o7
-    runs-on: ubuntu-latest
-    needs: linux-build
-    steps:
-      - name: Set net7.0
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '7.0.x'
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: linux-build-artifact
-          path: bin
-      - name: Update Package Respository
-        run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
-      - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
-      - name: Unit Testing
-        run: dotnet bin/Mosa.Utility.UnitTests.dll -o7
-
-  linux-unit-testing-o8:
-    name: Linux - Unit Testing -o8
-    runs-on: ubuntu-latest
-    needs: linux-build
-    steps:
-      - name: Set net7.0
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '7.0.x'
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: linux-build-artifact
-          path: bin
-      - name: Update Package Respository
-        run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
-      - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
-      - name: Unit Testing
-        run: dotnet bin/Mosa.Utility.UnitTests.dll -o8
-          
-  linux-unit-testing-o9:
-    name: Linux - Unit Testing -o9
+  linux-unit-testing:
+    strategy:
+      matrix:
+        optimization: [0,1,2,3,4,5,6,7,8,9]
+    name: Linux - Unit Testing -o{{ matrix.optimization }}
     runs-on: ubuntu-latest
     needs: linux-build
     steps:
@@ -582,4 +210,4 @@ jobs:
       - name: Install Qemu and Dependencies
         run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
       - name: Unit Testing  
-        run: dotnet bin/Mosa.Utility.UnitTests.dll -o9
+        run: dotnet bin/Mosa.Utility.UnitTests.dll -o{{ matrix.optimization }}
