--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -214,3 +214,28 @@ jobs:
         run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
       - name: Unit Testing  
         run: dotnet bin/Mosa.Utility.UnitTests.dll -o${{ matrix.optimization }}
+
+  windows-demo-testing:
+    strategy:
+      matrix:
+        optimization: [0,1,2,3,4,5,6,7,8,9]
+      fail-fast: false
+    name: Windows - Demo Tests -o${{ matrix.optimization }}
+    runs-on: windows-latest
+    needs: windows-build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
+      - name: Download Build Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: windows-build-artifact
+          path: bin
+      - name: Demo Test - HelloWorld
+        run: bin\Mosa.Tool.Launcher.Console.exe Mosa.Demo.HelloWorld.x86.dll -o${{ matrix.optimization }} -check -test
+      - name: Demo Test - CoolWorld
+        run: bin\Mosa.Tool.Launcher.Console.exe Mosa.Demo.CoolWorld.x86.dll -o${{ matrix.optimization }} -check -test
+      - name: Demo Test - SVGAWorld
+        run: bin\Mosa.Tool.Launcher.Console.exe Mosa.Demo.SVGAWorld.x86.dll -o${{ matrix.optimization }} -check -test
