--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -220,7 +220,7 @@ jobs:
       matrix:
         optimization: [0,1,2,3,4,5,6,7,8,9]
       fail-fast: false
-    name: Windows - Demo Testing -o${{ matrix.optimization }}
+    name: Windows - Demo Test -o${{ matrix.optimization }}
     runs-on: windows-latest
     needs: windows-build
     steps:
@@ -245,7 +245,7 @@ jobs:
       matrix:
         optimization: [0,1,2,3,4,5,6,7,8,9]
       fail-fast: false
-    name: Linux - Demo Testing -o${{ matrix.optimization }}
+    name: Linux - Demo Test -o${{ matrix.optimization }}
     runs-on: ubuntu-latest
     needs: linux-build
     steps:
@@ -267,8 +267,8 @@ jobs:
       - name: Install Qemu and Dependencies
         run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
       - name: Demo Test - HelloWorld
-        run: dotnet bin/Mosa.Tool.Launcher.Console.exe bin/Mosa.Demo.HelloWorld.x86.dll -o${{ matrix.optimization }} -check -test
+        run: dotnet bin/Mosa.Tool.Launcher.Console.dll bin/Mosa.Demo.HelloWorld.x86.dll -o${{ matrix.optimization }} -check -test
       - name: Demo Test - CoolWorld
-        run: dotnet bin/Mosa.Tool.Launcher.Console.exe bin/Mosa.Demo.CoolWorld.x86.dll -o${{ matrix.optimization }} -check -test
+        run: dotnet bin/Mosa.Tool.Launcher.Console.dll bin/Mosa.Demo.CoolWorld.x86.dll -o${{ matrix.optimization }} -check -test
       - name: Demo Test - SVGAWorld
-        run: dotnet bin/Mosa.Tool.Launcher.Console.exe bin/Mosa.Demo.SVGAWorld.x86.dll -o${{ matrix.optimization }} -check -test
+        run: dotnet bin/Mosa.Tool.Launcher.Console.dll bin/Mosa.Demo.SVGAWorld.x86.dll -o${{ matrix.optimization }} -check -test
