- Added Debug.Assert + Virtual Memory Manager - Added unit test

--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -35,6 +35,8 @@ jobs:
         run: dotnet restore Source/Mosa.sln
       - name: Build
         run: dotnet build Source/Mosa.sln /p:Version=${{ env.BUILD_VERSION }}
+      - name: Unit Test
+        run: dotnet test Source/Mosa.sln
       - name: Store Build Artifact
         uses: actions/upload-artifact@v3
         with:
@@ -130,6 +132,8 @@ jobs:
         run: dotnet restore Source/Mosa.Linux.sln
       - name: Build
         run: dotnet build Source/Mosa.Linux.sln
+      #- name: Unit Test
+      #  run: dotnet test Source/Mosa.Linux.sln
       - name: Store Build Artifact
         uses: actions/upload-artifact@v3
         with:
