--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -35,6 +35,8 @@ jobs:
         run: dotnet restore Source/Mosa.sln
       - name: Build
         run: dotnet build Source/Mosa.sln /p:Version=${{ env.BUILD_VERSION }}
+      - name: Cleanup 
+        run: cmd.exe /C "rmdir /s /q bin\reko bin\cs bin\de bin\es bin\fr bin\it bin\ja bin\ko bin\pl bin\pt-BR bin\ru bin\tr bin\zh-Hans bin\zh-Hant"
       - name: Store Build Artifact
         uses: actions/upload-artifact@v3
         with:
