--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -227,7 +227,6 @@ jobs:
     name: Linux - Unit Test -o${{ matrix.optimization }}
     runs-on: ubuntu-latest
     needs: linux-build
-
     steps:
       - name: Set net7.0
         uses: actions/setup-dotnet@v3
@@ -247,6 +246,35 @@ jobs:
       - name: Install Qemu and Dependencies
         run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
       - name: Unit Test  
+        run: dotnet bin/Mosa.Utility.UnitTests.dll -check -o${{ matrix.optimization }}
+        
+  macos-unit-testing:
+    strategy:
+      matrix:
+        optimization: [0,1,2,3,4,5,6,7,8,9]
+      fail-fast: false
+    name: MacOS - Unit Test -o${{ matrix.optimization }}
+    runs-on: ubuntu-latest
+    needs: linux-build
+    steps:
+      - name: Set net7.0
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '7.0.x'
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
+      - name: Download Build Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: macos-build-artifact
+          path: bin
+      #- name: Install Homebrew
+      #  run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+      - name: Install Qemu
+        run: brew install qemu
+      - name: Unit Test 
         run: dotnet bin/Mosa.Utility.UnitTests.dll -check -o${{ matrix.optimization }}
 
   windows-demo-testing:
