--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -265,6 +265,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
+      - name: Install Homebrew
+        run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
       - name: Homebrew Packages
         uses: ConorMacBride/install-package@v1
         with:
@@ -274,8 +276,7 @@ jobs:
         with:
           name: macos-build-artifact
           path: bin
-      #- name: Install Homebrew
-      #  run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+
       - name: Install Qemu
         run: brew install qemu
       - name: Unit Test 
