--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -256,6 +256,8 @@ jobs:
     name: MacOS - Unit Test -o${{ matrix.optimization }}
     runs-on: ubuntu-latest
     needs: macos-build
+    env:
+      HOMEBREW_NO_INSTALL_CLEANUP: 1
     steps:
       - name: Set net7.0
         uses: actions/setup-dotnet@v3
@@ -269,12 +271,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
-      #- name: Install Homebrew
-      #  run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-      - name: Homebrew Packages
-        uses: ConorMacBride/install-package@v1
-        with:
-          brew: qemu
       - name: Download Build Artifact
         uses: actions/download-artifact@v3
         with:
