--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -144,7 +144,7 @@ jobs:
          
   macos-build:
     name: MacOS Build
-    runs-on: macos-13
+    runs-on: macos-latest
     steps:
       - name: Set net7.0
         uses: actions/setup-dotnet@v3
@@ -254,7 +254,7 @@ jobs:
         optimization: [0,1,2,3,4,5,6,7,8,9]
       fail-fast: false
     name: MacOS - Unit Test -o${{ matrix.optimization }}
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     needs: macos-build
     env:
       HOMEBREW_NO_INSTALL_CLEANUP: 1
