--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -72,7 +72,7 @@ jobs:
 
   windows-build-packaging:
     name: Windows Build Packaging
-    needs: [windows-build, linux-build, generate-docs, windows-unit-testing, linux-unit-testing, windows-demo-testing, linux-demo-testing, macos-build, macos-unit-testing, macos-demo-testing]
+    needs: [windows-build, linux-build, generate-docs, windows-unit-testing, linux-unit-testing, windows-demo-testing, linux-demo-testing, macos-build, macos-unit-testing]
     runs-on: windows-latest
     if: github.event_name == 'push' && github.repository == 'mosa/MOSA-Project' && github.ref == 'refs/heads/master'
     env:
@@ -335,33 +335,33 @@ jobs:
       - name: Demo Test - SVGAWorld
         run: dotnet bin/Mosa.Tool.Launcher.Console.dll bin/Mosa.Demo.SVGAWorld.x86.dll -o${{ matrix.optimization }} -check -test
         
-  macos-demo-testing:
-    strategy:
-      matrix:
-        optimization: [0,1,2,3,4,5,6,7,8,9]
-      fail-fast: false
-    name: MacOS - Demo Test -o${{ matrix.optimization }}
-    runs-on: macos-latest
-    needs: macos-build
-    steps:
-      - name: Set net7.0
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '7.0.x'
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: macos-build-artifact
-          path: bin
-      #- name: Install Qemu
-      #  run: brew install qemu
-      - name: Demo Test - HelloWorld
-        run: dotnet bin/Mosa.Tool.Launcher.Console.dll bin/Mosa.Demo.HelloWorld.x86.dll -o${{ matrix.optimization }} -check -test
-      - name: Demo Test - CoolWorld
-        run: dotnet bin/Mosa.Tool.Launcher.Console.dll bin/Mosa.Demo.CoolWorld.x86.dll -o${{ matrix.optimization }} -check -test
-      - name: Demo Test - SVGAWorld
-        run: dotnet bin/Mosa.Tool.Launcher.Console.dll bin/Mosa.Demo.SVGAWorld.x86.dll -o${{ matrix.optimization }} -check -test
+  #macos-demo-testing:
+  #  strategy:
+  #    matrix:
+  #      optimization: [0,1,2,3,4,5,6,7,8,9]
+  #    fail-fast: false
+  #  name: MacOS - Demo Test -o${{ matrix.optimization }}
+  #  runs-on: macos-latest
+  #  needs: macos-build
+  #  steps:
+  #    - name: Set net7.0
+  #      uses: actions/setup-dotnet@v3
+  #      with:
+  #        dotnet-version: '7.0.x'
+  #    - name: Checkout
+  #      uses: actions/checkout@v3
+  #      with:
+  #        submodules: recursive
+  #    - name: Download Build Artifact
+  #      uses: actions/download-artifact@v3
+  #      with:
+  #        name: macos-build-artifact
+  #        path: bin
+  #    #- name: Install Qemu
+  #    #  run: brew install qemu
+  #    - name: Demo Test - HelloWorld
+  #      run: dotnet bin/Mosa.Tool.Launcher.Console.dll bin/Mosa.Demo.HelloWorld.x86.dll -o${{ matrix.optimization }} -check -test
+  #    - name: Demo Test - CoolWorld
+  #      run: dotnet bin/Mosa.Tool.Launcher.Console.dll bin/Mosa.Demo.CoolWorld.x86.dll -o${{ matrix.optimization }} -check -test
+  #    - name: Demo Test - SVGAWorld
+  #      run: dotnet bin/Mosa.Tool.Launcher.Console.dll bin/Mosa.Demo.SVGAWorld.x86.dll -o${{ matrix.optimization }} -check -test
