--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -331,7 +331,7 @@ jobs:
       - name: Demo Test - HelloWorld
         run: dotnet bin/Mosa.Tool.Launcher.Console.dll bin/Mosa.Demo.HelloWorld.x86.dll -o${{ matrix.optimization }} -check -test
       - name: Demo Test - CoolWorld [BareMetal]
-        run: bin\Mosa.Tool.Launcher.Console.exe bin/Mosa.BareMetal.HelloWorld.x86.dll -o${{ matrix.optimization }} -check -test
+        run: dotnet bin/Mosa.Tool.Launcher.Console.dll bin/Mosa.BareMetal.HelloWorld.x86.dll -o${{ matrix.optimization }} -check -test
       - name: Demo Test - CoolWorld [Legacy]
         run: dotnet bin/Mosa.Tool.Launcher.Console.dll bin/Mosa.Demo.CoolWorld.x86.dll -o${{ matrix.optimization }} -check -test
       - name: Demo Test - SVGAWorld
